=== 0.2 (unreleased) ===
- Drop official support for django < 1.11 and python 3.2-3.3


=== 0.1.9 (10-09-2017) ===
- Changed SentNotification.error_message to a TextField to fix issues when message is longer than 255 characters


=== 0.1.8 (09-05-2017) ===
- Fix for migration bug introduced in 0.1.7


=== 0.1.7 (08-31-2017) ===
- User disabled notifications support


=== 0.1.6 (06-30-2017) ===
- Email attachments support


=== 0.1.5 (02-10-2017) ===
- Added decorator to register notifications
- Fixed issue where an extra migration would get created in django 1.10
- Initial support for django 1.11


=== 0.1.4 (01-06-2017) ===
- Fixed an issue where sending TwilioTextNotifications would fail with an assertion error.


=== 0.1.3 (12-22-2016) ===
- Added a management command to delete old saved notifications
- Fixed an issue when installing herald without django already being installed
- Added django.contrib.auth for sending django's password reset email through herald
- Improved the herald email preview list


=== 0.1.2 (07-22-2016) ===
- Fixed bug finding template for front-end email viewer page.


=== 0.1.1 (07-22-2016) ===
- Fixed bug in initial pypi upload


=== 0.1 (07-19-2016) ===
- Initial release